# rgen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build_release.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: args.rs  main.rs  passphrase_password.rs  password_generator.rs  random_password.rs
