[package]
name = "rgen"
version = "1.0.0"
authors = ["Mateusz Czarnecki (DemwE)"]
description = "A simple CLI tool for generating random passwords."
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.11", features = ["derive"]}
rand = "0.8.5"

